# gelex

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  REFACTOR_PLAN.md  config.h.in  environment.yaml  main.cpp  pixi.toml  pyproject.toml  recipe.yaml  tmp
apps/: CMakeLists.txt  main.cpp
apps/cli/: CLAUDE.md  assoc_args.cpp  assoc_args.h  assoc_command.cpp  assoc_command.h  assoc_config.cpp  assoc_config.h  cli_helper.cpp  cli_helper.h  config_factory.h  data_pipe_config.cpp  data_pipe_config.h  data_pipe_reporter.cpp  data_pipe_reporter.h  fit_args.cpp  fit_args.h  fit_command.cpp  fit_command.h  fit_config.h  grm_args.cpp  grm_args.h  grm_command.cpp  grm_command.h  grm_config.cpp  grm_config.h  gwas_runner.cpp  gwas_runner.h  post_args.cpp  post_args.h  post_config.cpp  predict_args.cpp  predict_args.h  predict_command.cpp  predict_command.h  predict_config.h  reml_reporter.cpp  reml_reporter.h  simulate_args.cpp  simulate_args.h  simulate_command.cpp  (+6 more)
benchmark/: CMakeLists.txt  benchmark_gwas_writer.cpp  benchmark_sample.cpp  benchmark_tsv_approaches.cpp  benchmark_zvz.cpp
python/: CMakeLists.txt
python/gelexy/: __init__.py  _logger.py  logger.py  predictor.py
python/phenx/: __init__.py  logger.py  metrics.py  predictor.py  utils.py
python/src/: arma.h  array_caster.h  bind.cpp  bind_core.cpp  reml.h  reml_impl.h
src/: CMakeLists.txt  dist.cpp  estimator.cpp  logger.cpp  main.cpp  predictor.cpp  solver.cpp  timer.cpp  utils.cpp
src/bindings/: array_caster.h  bindings.cpp
src/cli/: assoc_command.cpp  fit_command.cpp  fit_command_detail.cpp  fit_command_detail.h  grm_command.cpp  gwas_command.cpp  predict_command.cpp  simulation_command.cpp  utils.cpp
src/data/: bed_io.cpp  bed_path.cpp  bed_pipe.cpp  bed_reader.cpp  bedpipe.cpp  binary_matrix_writer.cpp  binary_matrix_writer.h  binary_mmap_loader.h  binary_writer.h  cross_grm.cpp  data_pipe.cpp  datapipe.cpp  decode_lut.h  dummy_encode.cpp  effect_sampler.cpp  encode.cpp  genetic_value_calculator.cpp  genotype_loader.cpp  genotype_matrix.cpp  genotype_mmap.cpp  genotype_mmap.h  genotype_pipe.cpp  genotype_processor.cpp  grm.cpp  grm_bin_writer.cpp  grm_bin_writer.h  grm_code_policy.cpp  grm_id_writer.cpp  grm_id_writer.h  grm_loader.cpp  grm_loader.h  impute.cpp  io.cpp  loader.cpp  loader.h  loco_grm_loader.cpp  math_utils.cpp  math_utils.h  parser.cpp  parser.h  (+10 more)
src/detail/: indicator.cpp
src/estimator/: estimator.cpp  estimator_logger.cpp  mcmc.cpp  mcmc_diagnostics.cpp  mcmc_logger.cpp  mcmc_result.cpp  mcmc_samples.cpp  mcmc_storage.cpp
src/gelex/: .clang-tidy  CMakeLists.txt
src/gelex_bindings/: CMakeLists.txt  pixi.toml
src/gelexy/: __init__.py  metrics.py  predictor.py
src/gwas/: association_test.cpp  gwas_writer.cpp  snp_encoder.cpp
src/infra/: logger.cpp
src/io/: parser.cpp  text_writer.cpp
src/logger/: bayes_logger.cpp  bayes_logger.h  freq_logger.cpp  freq_logger.h  loco_reml_logger.cpp  loco_reml_logger.h  logger_utils.cpp  logger_utils.h  reml_logger.cpp  reml_logger.h  reml_logger_base.cpp  reml_logger_base.h
src/model/: bayes.cpp  bayes_effects.cpp  bayes_prior.cpp  effects.cpp  effects_manager.h  freq_effects.cpp  gblup.cpp  linear_mixed_model.cpp
src/optim/: base.cpp  base_optimizer.cpp  constrain.cpp  convergence_checker.cpp  expectation_maximization.cpp  optimizer.cpp  optimizer_new.cpp  optimizer_state.cpp  optimizers.cpp  policy.cpp  policy_new.cpp  second_order_optimizer.cpp  variance_calculator.cpp
src/pipeline/: assoc_detail.cpp  assoc_detail.h  assoc_loco_engine.cpp  assoc_normal_engine.cpp  data_pipe.cpp  fit_engine.cpp  geno_pipe.cpp  grm_engine.cpp  grm_pipe.cpp  grm_work_plan.cpp  grm_work_plan.h  pheno_pipe.cpp  phenotype_simulation_engine.cpp  posterior_analysis_engine.cpp
src/predict/: covar_effect_loader.cpp  covar_effect_loader.h  covar_predictor.cpp  covar_predictor.h  genotype_aligner.cpp  genotype_aligner.h  predict_bed_pipe.cpp  predict_bed_pipe.h  predict_dcovariate_loader.cpp  predict_dcovariate_loader.h  predict_engine.cpp  predict_engine.h  predict_params_pipe.cpp  predict_params_pipe.h  predict_pipe.cpp  predict_pipe.h  predict_writer.cpp  predict_writer.h  snp_matcher.cpp  snp_matcher.h  snp_predictor.cpp  snp_predictor.h
src/predictor/: covar_effect_loader.cpp  covar_effect_loader.h  covariate_loader.cpp  covariate_loader.h  covariate_processor.cpp  covariate_processor.h  predict_bed_pipe.cpp  predict_bed_pipe.h  predict_data.cpp  predict_data.h  predict_dcovariate_loader.h  predict_engine.cpp  predict_engine.h  predict_enigne.cpp  predict_enigne.h  predict_params_pipe.cpp  predict_params_pipe.h  predict_pipe.cpp  predict_pipe.h  predict_result.h  snp_effect_loader.cpp  snp_effect_loader.h  snp_effect_processor.cpp  snp_effect_processor.h  snp_matcher.cpp  snp_matcher.h
src/python/: CMakeLists.txt  bayes.cpp  bindings.cpp  freq.cpp  logger.cpp  sparse_caster.cpp
src/sim/: effect_sampler.cpp  genetic_value_calculator.cpp  phenotype_generator.cpp  simulate.cpp  simulation_writer.cpp
src/utils/: utils.cpp  (+8 more)
tests/: CMakeLists.txt  bed_fixture.cpp  bed_fixture.h  file_fixture.cpp  file_fixture.h  predict_engine_fixture.h  test_bayes.cpp  test_bed_path.cpp  test_bed_pipe.cpp  test_bed_reader.cpp  test_bim_loader.cpp  test_binary_matrix_writer.cpp  test_binary_mmap_loader.cpp  test_binary_writer.cpp  test_constrain.cpp  test_convergence_checker.cpp  test_covar_effect_loader.cpp  test_covar_loader.cpp  test_covariate_predict_loader.cpp  test_covariate_processor.cpp  test_cross_grm.cpp  test_data.bed  test_data.bim  test_data.cpp  test_data.fam  test_data_pipe.cpp  test_dataframe.cpp  test_dataset.cpp  test_dataset.py  test_dcovar_loader.cpp  test_dcovariate_predict_loader.cpp  test_diagnostics.cpp  test_dummy_encode.cpp  test_effect_sampler.cpp  test_estimator.cpp  test_fam_loader.cpp  test_freq_model.cpp  test_genetic_value_calculator.cpp  test_genotype_aligner.cpp  test_genotype_mmap.cpp  (+35 more)
(+684 files in other folders)
