[project]
authors = [{ name = "r1cheu", email = "chenrulei@cemps.ac.cn" }]
dependencies = [
  "numpy>=2.1.1,<3",
  "pandas>=2.2.3,<3",
  "tables>=3.10.1,<4",
  "bed-reader>=1.0.5,<2",
  "formulaic>=1.0.2,<2",
]
description = "Add a short description here"
name = "phenx"
requires-python = ">= 3.11"
version = "0.1.2"

[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.4.0,<3"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.source-dir = 'python'
wheel.expand-macos-universal-tags = true
wheel.packages = ["python/phenx"]
sdist.exclude = [".pixi", ".github"]

[tool.scikit-build.cmake.define]
USE_MKL = "OFF"

[tool.pixi.project]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]

[tool.pixi.environments]
dev = ["dev"]
test = ["test"]
jupyter = ["jupyter"]

[tool.pixi.feature.dev.dependencies]
cmake = ">=3.18,<4"
cxx-compiler = ">=1.8.0,<2"
make = ">=4.4.1,<5"
ninja = ">=1.12.1,<2"
uv = ">=0.5,<0.6"
pre-commit = ">=4.0, <5.0"
openblas = { version = ">=0.3.28", build = "*openmp*" }
spdlog = ">=1.15.0,<2"
catch2 = ">=3.7.1,<4"
mkl = ">=2025.0.0,<2026"

[tool.pixi.feature.dev.tasks]
build = "cmake -G Ninja -S . -B build -D BUILD_TEST=OFF -D BUILD_PYTHON_BINDINGS=OFF && cmake --build build -j24"
build_mkl = "cmake -G Ninja -S . -B build -D BUILD_TEST=OFF -D BUILD_PYTHON_BINDINGS=OFF -D USE_MKL=ON && cmake --build build -j24"
lsp = "cmake -G Ninja -S . -B build -D BUILD_TEST=OFF -D BUILD_PYTHON_BINDINGS=ON && cp build/compile_commands.json ./ && rm -rf build"
ctest = "cmake -G Ninja -S . -B build -D BUILD_TEST=ON -D BUILD_PYTHON_BINDINGS=OFF && cmake --build build && ./build/tests/test"
wheel = "uv build"

[tool.pixi.feature.dev.pypi-dependencies]
nanobind = ">=2.4.0,<3" # add for lsp

# Feature test
[tool.pixi.feature.test.pypi-dependencies]
pytest = ">=8.3"

# Feature jupyter
[tool.pixi.feature.jupyter.dependencies]
jupyterlab = ">=4.3.4,<5"
bash_kernel = ">=0.9.3,<0.10"
ipywidgets = ">=8.1.5,<9"
matplotlib = ">=3.10.0,<4"

[tool.pixi.feature.jupyter.tasks]
jupyter = "jupyter lab"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
log_cli_level = "INFO"
filterwarnings = ["error", "ignore::pytest.PytestCacheWarning"]
testpaths = ["tests"]

[tool.cibuildwheel]
environment = {}
build-frontend = "build[uv]"
# test-command = "pytest {project}/tests"
# test-extras = ["test"]

[tool.ruff]
src = ["python/phenx"]

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "ARG", # flake8-unused-arguments
  "C4",  # flake8-comprehensions
  "EM",  # flake8-errmsg
  "ICN", # flake8-import-conventions
  "G",   # flake8-logging-format
  "PGH", # pygrep-hooks
  "PIE", # flake8-pie
  "PL",  # pylint
  "PT",  # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "RET", # flake8-return
  "RUF", # Ruff-specific
  "SIM", # flake8-simplify
  "T20", # flake8-print
  "UP",  # pyupgrade
  "YTT", # flake8-2020
  "EXE", # flake8-executable
  "NPY", # NumPy specific rules
  "PD",  # pandas-vet
]
ignore = [
  "PLR09",   # Too many X
  "PLR2004", # Magic comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]

[tool.numpydoc_validation]
checks = [
  "all",  # report on all checks, except the below
  "EX01",
  "SA01",
  "ES01",
]
# remember to use single quotes for regex in TOML
exclude = [ # don't report on objects that match any of these regex
  '\.undocumented_method$',
  '\.__repr__$',
  '\.__init__$',
]
override_SS05 = [ # override SS05 to allow docstrings starting with these words
  '^Process ',
  '^Assess ',
  '^Access ',
]

[dependency-groups]
dev = ["memray>=1.15.0,<2"]
