[project]
name = "gelexy"
authors = [{ name = "r1cheu", email = "chenrulei@cemps.ac.cn" }]
requires-python = ">= 3.11"
version = "0.2.0"
description = "Add a short description here"
dependencies = [
  "numpy>=2.2.2,<3",
  "pandas>=2.2.3,<3",
  "formulaic>=1.1.1,<2",
  "h5py>=3.12.1,<4",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
log_cli_level = "INFO"
filterwarnings = ["error", "ignore::pytest.PytestCacheWarning"]
testpaths = ["tests"]

[tool.cibuildwheel]
environment = {}
build-frontend = "build[uv]"
test-command = "pytest {project}/tests"
test-extras = ["test"]

[tool.numpydoc_validation]
checks = [
  "all",  # report on all checks, except the below
  "EX01",
  "SA01",
  "ES01",
]
# remember to use single quotes for regex in TOML
exclude = [ # don't report on objects that match any of these regex
  '\.undocumented_method$',
  '\.__repr__$',
  '\.__init__$',
]
override_SS05 = [ # override SS05 to allow docstrings starting with these words
  '^Process ',
  '^Assess ',
  '^Access ',
]
