[project]
name = "gelexy"
authors = [{ name = "r1cheu", email = "chenrulei@cemps.ac.cn" }]
requires-python = ">= 3.11"
version = "0.3.0"
description = "Add a short description here"
dependencies = [
  "numpy>=2.2.2,<3",
  "pandas>=2.2.3,<3",
  "formulaic>=1.1.1,<2",
  "scipy>=1.15.2,<2",
  "formulae>=0.5.4,<0.6",
  "h5py>=3.12.1,<4",
]

[build-system]
requires = ["scikit-build-core>=0.11", "nanobind>=2.5.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["python/gelexy"]
build-dir = ".pybuild"
cmake.source-dir = "."
wheel.expand-macos-universal-tags = true

cmake.build-type = "Release"
build.tool-args = ["-j16"]

[tool.scikit-build.cmake.define]
USE_MKL = "ON"
BUILD_TEST = "ON"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
log_cli_level = "INFO"
filterwarnings = ["error", "ignore::pytest.PytestCacheWarning"]
testpaths = ["tests/python"]


[tool.cibuildwheel]
environment = {}
build-frontend = "build[uv]"
test-command = "pytest {project}/tests"
test-extras = ["test"]

[tool.numpydoc_validation]
checks = [
  "all",  # report on all checks, except the below
  "EX01",
  "SA01",
  "ES01",
]
# remember to use single quotes for regex in TOML
exclude = [ # don't report on objects that match any of these regex
  '\.undocumented_method$',
  '\.__repr__$',
  '\.__init__$',
]
override_SS05 = [ # override SS05 to allow docstrings starting with these words
  '^Process ',
  '^Assess ',
  '^Access ',
]
